Prepare for Render.com deployment: Switch from Docker to native Node.js
- Rename Dockerfile to Dockerfile.backup to disable Docker deployment
- Add 'start' script to package.json for Render.com compatibility
- Create .env.allinkl with All-Inkl.de MySQL configuration
- Include secure JWT secret for production use
- Ready for Render.com + All-Inkl.de MySQL setup

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Mental Map Tool - Prototype for linguistic perception mapping",
   "main": "server/index.js",
   "scripts": {
+    "start": "node server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
