--- a/.gitignore
+++ b/.gitignore
@@ -72,11 +72,13 @@ jspm_packages/
 # =============================================================================
 # Environment variables
 .env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env.rub
+.env.allinkl
 
 # Configuration files with sensitive data
 config/production.json
