Fix TypeScript conflict: use --legacy-peer-deps for client npm install

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: |
       npm install
       cd client
-      npm install
+      npm install --legacy-peer-deps
       npm run build
       cd ..
       ls -la client/
