--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "axios": "^1.4.0",
+    "html-to-image": "^1.11.13",
     "i18next": "^25.5.2",
     "leaflet": "^1.9.4",
     "leaflet-freedraw": "^2.11.2",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
+    "recharts": "^3.6.0",
     "uuid": "^9.0.0"
   },
   "scripts": {
