--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.1",
     "sqlite3": "^5.1.7",
