feat: Implement slider value visibility toggle, add responsive design, and enhance UI
- Add 'show_slider_value' translation to all 10 languages (de, en, fr, it, es, pt, ro, zh, ru, ca)
- Add checkbox in slider configuration to toggle value display (default: enabled)
- Update PublicSurvey.js to conditionally render slider value based on showValue property
- Implement comprehensive responsive design with mobile-first approach:
  * 5 breakpoints: 320px-480px (mobile), 481px-640px (small), 641px-768px (tablet), 769px-1024px (large), 1025px+ (desktop)
  * Touch device optimizations (44px+ touch targets, no hover effects)
  * Dark mode support with @media (prefers-color-scheme: dark)
  * Reduced motion support for accessibility
  * Landscape orientation handling
  * Retina display support (192dpi+)
  * Print-optimized styles
- Create responsive-utilities.css with 50+ utility classes for flexible development
- Update landing.css with extensive media queries for all breakpoints
- Optimize inline styles in StudyManagerUnified.js to use flexible padding (max() function)
- Fix incorrect CSS transition property syntax (remove quotes from inline styles)
- Remove 3 more instances of transition: 'all 0.3s ease' from delete buttons

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mentalmap-client",
-  "version": "1.0.0",
+  "name": "voice-mental-maps-client",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "ajv": "^8.17.1",
