--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.15.1",
+    "pdfkit": "^0.17.2",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.0"
   }
